syntax = "proto3";

service KeyValueStoreService {
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Write(WriteRequest) returns (WriteResponse);
    rpc List(ListRequest) returns (ListResponse);
}

message ReadRequest {
    int32 partition_id = 1;
    int32 object_id = 2;
    int32 server_id = 3;
}

message ReadResponse {
    string object_value = 1;
}

message WriteRequest {
    int32 partition_id = 1;
    int32 object_id = 2;
    string object_value = 3;
}

message WriteResponse {
}

message ListRequest {
    repeated StoredObject objects = 1;
}

message StoredObject {
    string value = 1;
    bool is_master = 2;
}